out
test.cpp: In function ‘void solve()’:
test.cpp:244:36: error: no match for ‘operator[]’ (operand types are ‘BS’ {aka ‘std::__debug::bitset<2000>’} and ‘std::__debug::vector<long long int>’)
  244 |                 for(auto i: is) cbs[i] = 1;
      |                                    ^
In file included from /usr/include/c++/12/bitset:1598,
                 from stdc++.h:66:
/usr/include/c++/12/debug/bitset:263:7: note: candidate: ‘std::__debug::bitset<_Nb>::reference std::__debug::bitset<_Nb>::operator[](std::size_t) [with long unsigned int _Nb = 2000; reference = std::__cxx1998::bitset<2000>::reference; std::size_t = long unsigned int]’
  263 |       operator[](size_t __pos)
      |       ^~~~~~~~
/usr/include/c++/12/debug/bitset:263:25: note:   no known conversion for argument 1 from ‘std::__debug::vector<long long int>’ to ‘std::size_t’ {aka ‘long unsigned int’}
  263 |       operator[](size_t __pos)
      |                  ~~~~~~~^~~~~
/usr/include/c++/12/debug/bitset:276:7: note: candidate: ‘constexpr bool std::__debug::bitset<_Nb>::operator[](std::size_t) const [with long unsigned int _Nb = 2000; std::size_t = long unsigned int]’
  276 |       operator[](size_t __pos) const
      |       ^~~~~~~~
/usr/include/c++/12/debug/bitset:276:25: note:   no known conversion for argument 1 from ‘std::__debug::vector<long long int>’ to ‘std::size_t’ {aka ‘long unsigned int’}
  276 |       operator[](size_t __pos) const
      |                  ~~~~~~~^~~~~
test.cpp:245:35: error: no match for ‘operator[]’ (operand types are ‘vBS’ {aka ‘std::__debug::vector<std::__debug::bitset<2000> >’} and ‘std::__debug::vector<long long int>’)
  245 |                 for(auto i: is) bs[i] ^= cbs;
      |                                   ^
In file included from /usr/include/c++/12/vector:74,
                 from /usr/include/c++/12/functional:62,
                 from stdc++.h:71:
/usr/include/c++/12/debug/vector:440:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::reference std::__debug::vector<_Tp, _Allocator>::operator[](size_type) [with _Tp = std::__debug::bitset<2000>; _Allocator = std::allocator<std::__debug::bitset<2000> >; reference = std::__debug::bitset<2000>&; size_type = long unsigned int]’
  440 |       operator[](size_type __n) _GLIBCXX_NOEXCEPT
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:440:28: note:   no known conversion for argument 1 from ‘std::__debug::vector<long long int>’ to ‘std::__debug::vector<std::__debug::bitset<2000> >::size_type’ {aka ‘long unsigned int’}
  440 |       operator[](size_type __n) _GLIBCXX_NOEXCEPT
      |                  ~~~~~~~~~~^~~
/usr/include/c++/12/debug/vector:448:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>::const_reference std::__debug::vector<_Tp, _Allocator>::operator[](size_type) const [with _Tp = std::__debug::bitset<2000>; _Allocator = std::allocator<std::__debug::bitset<2000> >; const_reference = const std::__debug::bitset<2000>&; size_type = long unsigned int]’
  448 |       operator[](size_type __n) const _GLIBCXX_NOEXCEPT
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:448:28: note:   no known conversion for argument 1 from ‘std::__debug::vector<long long int>’ to ‘std::__debug::vector<std::__debug::bitset<2000> >::size_type’ {aka ‘long unsigned int’}
  448 |       operator[](size_type __n) const _GLIBCXX_NOEXCEPT
      |                  ~~~~~~~~~~^~~
test.cpp:246:36: error: no match for ‘operator[]’ (operand types are ‘BS’ {aka ‘std::__debug::bitset<2000>’} and ‘std::__debug::vector<long long int>’)
  246 |                 for(auto i: is) cbs[i] = 0;
      |                                    ^
/usr/include/c++/12/debug/bitset:263:7: note: candidate: ‘std::__debug::bitset<_Nb>::reference std::__debug::bitset<_Nb>::operator[](std::size_t) [with long unsigned int _Nb = 2000; reference = std::__cxx1998::bitset<2000>::reference; std::size_t = long unsigned int]’
  263 |       operator[](size_t __pos)
      |       ^~~~~~~~
/usr/include/c++/12/debug/bitset:263:25: note:   no known conversion for argument 1 from ‘std::__debug::vector<long long int>’ to ‘std::size_t’ {aka ‘long unsigned int’}
  263 |       operator[](size_t __pos)
      |                  ~~~~~~~^~~~~
/usr/include/c++/12/debug/bitset:276:7: note: candidate: ‘constexpr bool std::__debug::bitset<_Nb>::operator[](std::size_t) const [with long unsigned int _Nb = 2000; std::size_t = long unsigned int]’
  276 |       operator[](size_t __pos) const
      |       ^~~~~~~~
/usr/include/c++/12/debug/bitset:276:25: note:   no known conversion for argument 1 from ‘std::__debug::vector<long long int>’ to ‘std::size_t’ {aka ‘long unsigned int’}
  276 |       operator[](size_t __pos) const
      |                  ~~~~~~~^~~~~
test.cpp:243:22: warning: unused variable ‘i’ [-Wunused-variable]
  243 |             for(auto i: is[a]) {
      |                      ^
